--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <h1>Hello World!</h1>
+    <h1>Home</h1>
+    <a href="{{ path('app_news', { title: "You" }
+    ) }}">You</a>
 {% endblock %}
