--- a/templates/page/home.html.twig
+++ b/templates/page/home.html.twig
@@ -2,6 +2,6 @@
 
 {% block body %}
     <h1>Home</h1>
-    <a href="{{ path('app_news', { title: "You" }
+    <a class="btn btn-primary" href="{{ path('app_news', { title: "You" }
     ) }}">You</a>
 {% endblock %}
