--- a/templates/page/art.html.twig
+++ b/templates/page/art.html.twig
@@ -1,8 +1,11 @@
 {% extends "base.html.twig" %}
 
+{% block javascripts %}
+    <script src="{{ asset("js/art.js") }}">
+{% endblock%}
+
 {% block body %}
     <h1>
-        Hello {{ title }}
+        Hello {{ title }} !
     </h1>
-    <a href="{{ path("app_home") }}">home</a>
 {% endblock %}
