--- a/templates/page/art.html.twig
+++ b/templates/page/art.html.twig
@@ -1,11 +1,13 @@
 {% extends "base.html.twig" %}
 
-{% block javascripts %}
-    <script src="{{ asset("js/art.js") }}">
-{% endblock%}
 
 {% block body %}
     <h1>
         Hello {{ title }} !
     </h1>
 {% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset("js/art.js") }}"></script>
+{% endblock%}
