--- a/templates/page/home.html.twig
+++ b/templates/page/home.html.twig
@@ -1,7 +1,10 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <h1>Home</h1>
+    <h1>
+        <i class="fas fa-home    "></i>
+        Home
+    </h1>
     <a class="btn btn-primary" href="{{ path('app_news', { title: "You" }
     ) }}">You</a>
 {% endblock %}
