--- a/templates/page/home.html.twig
+++ b/templates/page/home.html.twig
@@ -2,9 +2,9 @@
 
 {% block body %}
     <h1>
-        <i class="fas fa-home    "></i>
+        <i class="fas fa-home"></i>
         Home
     </h1>
-    <a class="btn btn-primary" href="{{ path('app_news', { title: "You" }
+    <a class="btn btn-primary" href="{{ path('news', { title: "You" }
     ) }}">You</a>
 {% endblock %}
