--- a/templates/inc/menu.html.twig
+++ b/templates/inc/menu.html.twig
@@ -1,6 +1,6 @@
 <!-- Image and text -->
 <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="{{ path("app_home") }}">
+  <a class="navbar-brand" href="{{ path("home") }}">
     Home
   </a>
 </nav>
