--- a/templates/page/art.html.twig
+++ b/templates/page/art.html.twig
@@ -5,7 +5,11 @@
     <h1>
         Godspeed {{ title }} !
     </h1>
-    <a href="{{ path("news_toggle_heart", { slug: slug }) }}" class="heart btn btn-secondary">
+    <div>
+        {{ content|raw }}
+    </div>
+    <br/>
+    <a href="{{ path("news_toggle_heart", { slug: slug }) }}"class="heart btn btn-secondary">
         <i class="far fa-heart" aria-hidden="true"></i>
         <span class="likes">5</span>
     </a>
