--- a/templates/page/home.html.twig
+++ b/templates/page/home.html.twig
@@ -5,6 +5,6 @@
         <i class="fas fa-home"></i>
         Home
     </h1>
-    <a class="btn btn-primary" href="{{ path('news', { slug: "you-black-emperor" }
+    <a class="btn btn-primary" href="{{ path('art', { slug: "you-black-emperor" }
     ) }}">You</a>
 {% endblock %}
